# inteligent-rss

./: .gitignore  LICENSE  Makefile  POETRY_SETUP.md  README.md  config.py  install_dependencies.sh  install_poetry.sh  install_venv.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_system.py
examples/: __init__.py  basic_usage.py
src/: __init__.py  base_source.py  database.py  llm_processor.py  main.py  rss_consumer.py
src/database/: RSSDatabase.py  utils.py
src/llm/: ArticleQueryMatcher.py
src/sources/: CustomSourceExample.py  GenericRSS.py  ORFNewsRSS.py  OTSRSS.py  __init__.py  base_source.py  custom_source_example.py  generic_rss.py  orf_news_rss.py  ots_rss.py  reddit.py  tech_crunch.py  utils.py
